# rjango

./: .gitignore  Cargo.toml  README.md  REPORT.md  ROADMAP.md
examples/: blog.rs
report/: 00-index.md  01-core.md  02-orm.md  03-templates-and-forms.md  04-auth-and-admin.md  05-middleware-security-server.md  06-cli-migrations-testing.md  07-remaining-features.md
reports/: README.md  django-comparison-master.md  django-contrib-features.md  django-core-features.md  django-forms-auth-middleware-features.md  django-orm-features.md  django-templates-features.md  django-urls-views-test-features.md  gap-analysis.md
rjango-admin/: Cargo.toml
rjango-admin/src/: lib.rs  sites.rs
rjango-auth/: Cargo.toml
rjango-auth/src/: backends.rs  decorators.rs  forms.rs  hashers.rs  lib.rs  middleware_.rs  models.rs  password_validation.rs  permission_mixin.rs  views.rs
rjango-cli/: Cargo.toml
rjango-cli/src/: main.rs  utils.rs
rjango-cli/src/commands/: check.rs  collectstatic.rs  console.rs  createsuperuser.rs  dbshell.rs  makemigrations.rs  migrate.rs  mod.rs  runserver.rs  shell.rs  showmigrations.rs  startapp.rs  startproject.rs  test.rs  validate.rs
rjango-conf/: Cargo.toml
rjango-conf/src/: lib.rs
rjango-contrib/: Cargo.toml
rjango-contrib/src/: admin.rs  flatpages.rs  humanize.rs  lib.rs  messages.rs  redirects.rs  sitemaps.rs  staticfiles.rs  syndication.rs
rjango-core/: Cargo.toml
rjango-core/src/: app.rs  apps.rs  cache.rs  checks.rs  contenttypes.rs  errors.rs  exceptions.rs  files.rs  handlers.rs  http.rs  lib.rs  mail.rs  messages.rs  paginator.rs  serializers.rs  sessions.rs  settings.rs  shortcuts.rs  signals.rs  signing.rs  staticfiles.rs  storage.rs  validators.rs
rjango-dispatch/: Cargo.toml
rjango-dispatch/src/: lib.rs
rjango-forms/: Cargo.toml
rjango-forms/src/: fields.rs  formsets.rs  lib.rs  modelform.rs  rendering.rs  validation.rs  widgets.rs
rjango-middleware/: Cargo.toml
rjango-middleware/src/: cache.rs  clickjacking.rs  common.rs  conditional_get.rs  csp.rs  csrf.rs  gzip.rs  lib.rs  locale.rs  messages.rs  remote_user.rs  security.rs  session.rs
rjango-migrations/: Cargo.toml
rjango-migrations/src/: detector.rs  lib.rs  operations.rs  runner.rs
rjango-orm/: Cargo.toml
rjango-orm/src/: aggregates.rs  backend.rs  executor.rs  expressions.rs  fields.rs  functions.rs  lib.rs  lookups.rs  managers.rs  models.rs  query.rs  relationships.rs
rjango-server/: Cargo.toml
rjango-server/src/: lib.rs
rjango-tasks/: Cargo.toml
rjango-tasks/src/: lib.rs
rjango-templates/: Cargo.toml
rjango-templates/src/: context.rs  engine.rs  filters.rs  lib.rs  loaders.rs  processors.rs  tags.rs
rjango-test/: Cargo.toml
rjango-test/examples/: blog.rs
rjango-test/src/: client.rs  lib.rs  runner.rs  testcases.rs
rjango-test/tests/: integration.rs
rjango-urls/: Cargo.toml
rjango-urls/src/: base.rs  converters.rs  lib.rs  resolvers.rs
rjango-utils/: Cargo.toml
rjango-utils/src/: crypto.rs  functional.rs  html.rs  http.rs  i18n.rs  lib.rs  safestring.rs  text.rs
rjango-views/: Cargo.toml
rjango-views/src/: lib.rs
