[workspace]
members = [
    "rjango-core",
    "rjango-orm",
    "rjango-server",
    "rjango-cli",
    "rjango-admin",
    "rjango-templates",
    "rjango-migrations",
    "rjango-auth",
    "rjango-forms",
    "rjango-middleware",
    "rjango-urls",
    "rjango-views",
    "rjango-dispatch",
    "rjango-conf",
    "rjango-utils",
    "rjango-test",
    "rjango-contrib",
    "rjango-tasks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rjango Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "sqlite"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
askama = "0.12"
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
regex = "1"
bytes = "1"
mime_guess = "2"
percent-encoding = "2"
parking_lot = "0.12"
futures = "0.3"
tinytemplate = "1.1"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
base64 = "0.22"
argon2 = "0.5"
bcrypt = "0.15"
