[package]
name = "rjango-auth"
version.workspace = true
edition.workspace = true
description = "Authentication: users, permissions, sessions"

[dependencies]
rjango-core = { path = "../rjango-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
urlencoding.workspace = true
