[package]
name = "rjango-cli"
version.workspace = true
edition.workspace = true
description = "Rjango CLI — django-admin / manage.py equivalent"

[[bin]]
name = "rjango"
path = "src/main.rs"

[dependencies]
rjango-core = { path = "../rjango-core" }
rjango-server = { path = "../rjango-server" }
rjango-orm = { path = "../rjango-orm" }
rjango-urls = { path = "../rjango-urls" }
rjango-migrations = { path = "../rjango-migrations" }
rjango-auth = { path = "../rjango-auth" }
rjango-admin = { path = "../rjango-admin" }
rjango-forms = { path = "../rjango-forms" }
rjango-templates = { path = "../rjango-templates" }
rjango-middleware = { path = "../rjango-middleware" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
