[package]
name = "rjango-orm"
version.workspace = true
edition.workspace = true
description = "ORM — models, query builder, migrations, fields"

[dependencies]
rjango-core = { path = "../rjango-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "mysql", "sqlite"] }
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
