[package]
name = "rjango-server"
version.workspace = true
edition.workspace = true
description = "HTTP server — runs the Rjango app"

[dependencies]
rjango-core = { path = "../rjango-core" }
rjango-middleware = { path = "../rjango-middleware" }
rjango-urls = { path = "../rjango-urls" }
rjango-templates = { path = "../rjango-templates" }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
